[package]
name = "rust-atomics"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["lib", "staticlib"]

[features]
simulation = []

[dependencies]
crossbeam-channel = "0.5.14"
dashmap = "6.1.0"
parking_lot = "0.12.3"
libc = "0.2.170"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1

[[bin]]
bench = false
name = "mpmc_queue"
test = false
